--- a/d&d.html
+++ b/d&d.html
@@ -21,7 +21,7 @@ function drop(ev) {
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
-<img id="drag1" src="img_l.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
+<img id="drag1" src="img_lgfvwewsfs.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
 
 </body>
 </html>
