--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,7 @@
 
             <div class="col-8 ">
 
-                    <h3 class="text-danger">ALL'ISOLANA IN "PENTOLINO"</h3>
+                    <h3 class="text-danger">BUILD A BOWL</h3>
                     <p>RISOTTO WITH PORK LOIN, FRESH PANCETTA,
                          GRANA PADANO PDO CHEESE, ROSEMARY AND A HINT OF CINNAMO. THE TYPICAL RISOTTO FROM VERONA SERVED IN A SMALL POT</p>
                          <hr class=" my-4 ">
@@ -94,8 +94,7 @@
             <div class="col-2"></div>
 
             <div class="col-2">
-                    <p class="font-weight-bold mt-5 dollar">22.00</p>
-                    
+                <a href="d&d.html" class="btn btn-info btn-lg border-0 btun" style="width:100px; padding: 10px">Build</a> 
 
             </div>
 
